# scrollsnap

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_synthetic.py
docs/: architecture.md  integrations.md
integrations/openclaw/: README.md  skill.json
reports/release/: evaluation_report.md  release_benchmark.json
reports/release/browser_traces/browser_article/: trace.json
reports/release/browser_traces/browser_dashboard/: trace.json
reports/release/browser_traces/browser_table/: trace.json
scripts/: build_dist.py
src/scrollsnap/: __init__.py  alignment.py  analyzer.py  benchmark.py  browser_scenarios.py  cli.py  config.py  imaging.py  mcp_server.py  media.py  metrics.py  mosaic.py  openclaw_adapter.py  release_report.py  synthetic.py  tiles.py  token_estimate.py  trace.py  types.py  video.py  viewport.py  vision.py
tests/: test_pipeline.py
